--- a/assets/package.json
+++ b/assets/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-brunch": "6.0.6",
+    "babel-preset-latest": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "brunch": "2.10.7",
     "clean-css-brunch": "2.10.0",
     "css-brunch": "2.10.0",
